@@ -11,7 +11,7 @@ packages:
 - automake (version >= 1.7)
 - gettext (version >= 0.11.5)
 - groff
-- texinfo
+- texinfo (version >= 4.0)
 - cvs
 - ssh (with support for the SSH version 2 protocol)
 - glib 2.x (if your system doesn't have vsnprintf())
